@@ -218,6 +218,11 @@ void _init_chrtrtable(
 
 SEXP debug_bufutils();
 
+void _IntBuf_set_val(
+	IntBuf *ibuf,
+	int val
+);
+
 IntBuf _new_IntBuf(
 	int buflength,
 	int nelt
@@ -229,9 +234,25 @@ void _IntBuf_insert_at(
 	int val
 );
 
+void _IntBuf_append(
+	IntBuf *ibuf,
+	int *vals,
+	int nval
+);
+
 void _IntBuf_delete_at(
 	IntBuf *ibuf,
 	int at
+);
+
+void _IntBuf_sum_val(
+	IntBuf *ibuf,
+	int val
+);
+
+void _IntBuf_sum_IntBuf(
+	IntBuf *ibuf1,
+	IntBuf *ibuf2
 );
 
 SEXP _IntBuf_asINTEGER(IntBuf *ibuf);
@@ -252,6 +273,16 @@ void _IntBBuf_insert_at(
 	IntBBuf *ibbuf,
 	int at,
 	IntBuf ibuf
+);
+
+void _IntBBuf_eltwise_append(
+	IntBBuf *ibbuf1,
+	IntBBuf *ibbuf2
+);
+
+void _IntBBuf_sum_val(
+	IntBBuf *ibbuf,
+	int val
 );
 
 SEXP _IntBBuf_asLIST(
@@ -1175,8 +1206,8 @@ SEXP XString_match_TBdna(
 	SEXP actree_nodes_xp,
 	SEXP actree_base_codes,
 	SEXP pdict_dups,
-	SEXP pdict_head_XStringSet,
-	SEXP pdict_tail_XStringSet,
+	SEXP pdict_head,
+	SEXP pdict_tail,
 	SEXP subject,
 	SEXP max_mismatch,
 	SEXP fixed,
@@ -1188,8 +1219,8 @@ SEXP XStringViews_match_TBdna(
 	SEXP actree_nodes_xp,
 	SEXP actree_base_codes,
 	SEXP pdict_dups,
-	SEXP pdict_head_XStringSet,
-	SEXP pdict_tail_XStringSet,
+	SEXP pdict_head,
+	SEXP pdict_tail,
 	SEXP subject,
 	SEXP views_start,
 	SEXP views_width,
